ipc/ipdl/test/ipdl/error/intrMessageCompress.ipdl
//error: message `foo' in protocol `intrMessageCompress' requests compression but is not async
//error: message `bar' in protocol `intrMessageCompress' requests compression but is not async

intr protocol intrMessageCompress {
parent:
    intr foo() compress;
child:
    intr bar() compress;
};
